Fixed button spacing

--- a/css/popup.css
+++ b/css/popup.css
@@ -18,4 +18,6 @@ a, button {
   margin: 0 auto;
   font-size: 10px;
   padding: 2px 6px;
+  width: 45%;
+
 }
